proxyless/yaml/server2/kitex_server.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitex-server2
spec:
  ports:
    - port: 80
      targetPort: 8888
  selector:
    app: kitex-server2

# Server with two versions, v1 and v2.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitex-server2-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitex-server2
      version: v1
  template:
    metadata:
      labels:
        app: kitex-server2
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: kitex-server2
          image: liamzqh/kitex-proxyless-example
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitex-server2-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitex-server2
      version: v2
  template:
    metadata:
      labels:
        app: kitex-server2
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: kitex-server2
        image: kitex-example/proxyless
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kitex-server2
spec:
  host: kitex-server2
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
  trafficPolicy:
    tls:
      mode: DISABLE
